--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project one</title>
-    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -28,7 +28,30 @@
           </nav>
     </div>
 
+<div class="container">
+  <div id="carouselExampleAutoplaying" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="all img/headphone.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="all img/tv.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="all img/xbox.png" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
-    <script src="../../js/bootstrap.min.js"></script>
+</div>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
